testsuite/tests/simplCore/should_compile/simpl017.stderr
simpl017.hs:55:12: error: [GHC-46956]
    • Couldn't match type ‘v0’ with ‘v’
      Expected: [E m i] -> E' v m a
        Actual: [E m i] -> E' v0 m a
        because type variable ‘v’ would escape its scope
      This (rigid, skolem) type variable is bound by
        a type expected by the context:
          forall v. [E m i] -> E' v m a
        at simpl017.hs:55:12
    • In the first argument of ‘return’, namely ‘f’
      In a stmt of a 'do' block: return f
      In the first argument of ‘E’, namely
        ‘(do let ix :: [E m i] -> m i
                 ix [i] = runE i
                 {-# INLINE f #-}
                 ....
             return f)’
    • Relevant bindings include
        f :: [E m i] -> E' v0 m a (bound at simpl017.hs:54:9)

